draft responsive tablet completed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,34 @@
 @media screen and (max-width: 768px) {
+    
+    /* General */
+    
+    .container {
+        max-width: 768px;
+    }
+
+    img {
+        width: 100%;
+        display: block;
+    }
+
+    /* Utilities */
+
+    .col {
+        padding: 0;
+    }
+
+    .text {
+        padding: 0 10px
+    }
+
+    /* Why us section */
+
+    .why-us .col-left {
+        flex-basis: 35%;
+    }
+
+    .why-us .col-right {
+        flex-basis: 65%;
+    }
 
 }
