tablet container issue resolved

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,11 @@
+/* Tablet responsive */
+
 @media screen and (max-width: 768px) {
     
     /* General */
     
     .container {
-        max-width: 768px;
+        max-width: 100%;
     }
 
     img {
