--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,3 +34,27 @@
     }
 
 }
+
+@media screen and (max-width: 576px) {
+
+    /* Utilities */
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
+
+    /* .steps {
+        margin-bottom: 0;
+    } */
+
+    .steps .col, .lessons .col {
+        width: 100%;
+    }
+
+    /* .why-us {
+        background-color: black;
+        margin: 1rem 0 0;
+    } */
+}
