--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,6 +15,11 @@
 
     /* Utilities */
 
+    .row {
+        gap: 20px;
+        padding: 0 20px;
+    }
+
     .col {
         padding: 0;
     }
@@ -22,18 +27,10 @@
     .text {
         padding: 0 10px
     }
-
-    /* Why us section */
-
-    .why-us .col-left {
-        flex-basis: 35%;
-    }
-
-    .why-us .col-right {
-        flex-basis: 65%;
-    }
-
 }
+
+
+/* Mobile responsive */
 
 @media screen and (max-width: 576px) {
 
@@ -60,8 +57,11 @@
         margin: 0;
     }
 
+    .why-us .col-left, .why-us .col-right {
+        width: 100%;
+    }
+
     .why-us h2 {
-        /* margin-top: 1rem; */
         padding-top: 3rem;
     }
 }
