--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,11 @@
 /* Tablet responsive */
 
+@media screen and (max-width: 1160px) {
+    .container {
+        max-width: 100%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     
     /* General */
